dz: add ProductReturn and test ProductReturnService