@@ -1,17 +1,25 @@
 package ru.shop.service;
 
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
+import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 import ru.shop.exception.BadOrderCountException;
 import ru.shop.model.Customer;
 import ru.shop.model.Order;
 import ru.shop.model.Product;
+import ru.shop.model.ProductType;
 import ru.shop.repository.OrderRepository;
 
 import java.util.List;
 import java.util.UUID;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.verify;
 
@@ -23,26 +31,33 @@ class OrderServiceTest {
     @Test
     public void shouldAddOrder() {
         // given
-        Customer customer = new Customer();
-        Product product = new Product();
+        Customer customer = new Customer(UUID.randomUUID(), "Nameee", "213124", 12);
+        Product product = new Product(UUID.randomUUID(), "product", 120, ProductType.SERVICE);
 
         // when
         service.add(customer, product, 10);
 
         // then
-        verify(repository).save(any());
+        ArgumentCaptor<Order> orderArgumentCaptor = ArgumentCaptor.captor();
+
+        verify(repository).save(orderArgumentCaptor.capture());
+        Order savedOrder = orderArgumentCaptor.getValue();
+        assertThat(savedOrder)
+                .returns(10L, Order::getCount);
     }
 
-    @Test
-    public void shouldThrowBadOrderCountExceptionWhenCountIsLessOrEqualsThanZero() {
+
+    @ParameterizedTest
+    @ValueSource(ints = { 0, -1, -2, Integer.MIN_VALUE })
+    public void shouldThrowBadOrderCountExceptionWhenCountIsLessThanOrEqualsZero(Integer count) {
         // given
-        Customer customer = new Customer();
-        Product product = new Product();
+        Customer customer = new Customer(UUID.randomUUID(), "Nameee", "213124", 12);
+        Product product = new Product(UUID.randomUUID(), "product", 120, ProductType.SERVICE);
 
         // when
-        Assertions.assertThrows(
+        assertThrows(
                 BadOrderCountException.class,
-                () -> service.add(customer, product, 0)
+                () -> service.add(customer, product, count)
         );
     }
 
@@ -69,8 +84,8 @@ class OrderServiceTest {
         List<Order> lookUpResult = service.findByCustomer(customer);
 
         // then
-        Assertions.assertEquals(1, lookUpResult.size());
-        Assertions.assertEquals(customerOrder, lookUpResult.get(0));
+        assertEquals(1, lookUpResult.size());
+        assertEquals(customerOrder, lookUpResult.getFirst());
     }
 
     @Test
@@ -99,7 +114,7 @@ class OrderServiceTest {
         long result = service.getTotalCustomerAmount(customer);
 
         // then
-        Assertions.assertEquals(30, result);
+        assertEquals(30, result);
     }
 
 }
